--- a/projects.css
+++ b/projects.css
@@ -278,6 +278,7 @@
         width: 26rem;
         height: 18rem;
         margin-left: 1rem;
+        margin-top: 4rem;
     }
 
     .project-info {
@@ -297,12 +298,14 @@
         width: 26rem;
         height: 18rem;
         margin-left: 1rem;
+        margin-top: 4rem;
     }
 
     .project-four-img {
         width: 26rem;
         height: 18rem;
         margin-left: 1rem;
+        margin-top: 4rem;
     }
 
     .project-margin-bottom {
